fix layout issues when resizing

--- a/css/header.css
+++ b/css/header.css
@@ -1,21 +1,26 @@
 .navbar {
-   max-width: 1170px;
    margin: 10px auto 25px;
-   background-color: #eeeeee;
-   border-bottom-width: 0;
-   font-size: 18px;
+   font-size: 14px;
    line-height: 20px;
    font-weight: 300;
+   border-bottom-width: 0;
 }
 
-.container.druid-navbar {
-   background-color: #171717;
+.navbar-collapse {
+   padding-left: 5px;
+   padding-right: 5px;
+}
+
+.navbar-brand {
+  font-size: 14px;
+}
+
+.navbar-wrapper .navbar {
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
           border-radius: 4px;
   -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
      -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
           box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
-
 }
 
